--- a/Day3/manifest/yaml/employee/deployment.yaml
+++ b/Day3/manifest/yaml/employee/deployment.yaml
@@ -21,35 +21,20 @@ spec:
         ports:
         - containerPort: 8080
         resources:
-          requests:
-            memory: "500Mi"
-            cpu: "1000m"
           limits:
-            memory: "500Mi"
-            cpu: "1000m"
+            cpu: 150m
+            memory: 300Mi
+          requests:
+            cpu: 100m
+            memory: 100Mi
         env:
         - name: MYSQL_USER
-          valueFrom:
-            secretKeyRef:
-              name: db-credentials
-              key: MYSQL_USER
+          value: "dbusername"
         - name: MYSQL_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: db-credentials
-              key: MYSQL_PASSWORD
+          value: "dbpassword"
         - name: MYSQL_HOST
-          valueFrom:
-            secretKeyRef:
-              name: db-credentials
-              key: MYSQL_HOST
+          value: "dbhost"
         - name: MYSQL_PORT
-          valueFrom:
-            secretKeyRef:
-              name: db-credentials
-              key: MYSQL_PORT
+          value: "dbport"
         - name: MYSQL_DBNAME
-          valueFrom:
-            secretKeyRef:
-              name: db-credentials
-              key: MYSQL_DBNAME
+          value: "dbname"
