--- a/Day3/EKS/manifest/yaml/token/deployment.yaml
+++ b/Day3/EKS/manifest/yaml/token/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     metadata:
       labels:
         app: token
+        apps: worker
     spec:
       containers:
       - name: token-cnt
@@ -27,3 +28,35 @@ spec:
           requests:
             cpu: 150m
             memory: 150Mi
+        startupProbe:
+          httpGet:
+            path: /healthcheck
+            port: 8080
+          initialDelaySeconds: 0
+          periodSeconds: 5
+          timeoutSeconds: 10
+          failureThreshold: 12
+          successThreshold: 1
+        readinessProbe:
+          httpGet:
+            path: /healthcheck
+            port: 8080
+          initialDelaySeconds: 0
+          periodSeconds: 5
+          timeoutSeconds: 10
+          failureThreshold: 3
+          successThreshold: 1
+        livenessProbe:
+          httpGet:
+            path: /healthcheck
+            port: 8080
+          initialDelaySeconds: 0
+          periodSeconds: 5
+          timeoutSeconds: 10
+          failureThreshold: 6
+          successThreshold: 1
+        lifecycle:
+          preStop:
+            exec:
+              command: ["/bin/sh","-c","sleep 30"]
+      terminationGracePeriodSeconds: 10
